--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,39 @@
   font-weight: 900;
   font-style: italic;
 }
+
+.circleAnimation {
+  animation: 1s rolling linear infinite;
+}
+.bgChanging {
+  background-color: rgba(255, 255, 255, 0.49);
+  animation: 1s opacityChange linear infinite;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+@keyframes opacityChange {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes rolling {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 .container {
   padding-right: 15px;
   padding-left: 15px;
